src/workload-deploy/aks/ao.fe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ao-fe
spec:
  replicas: 10
  selector:
    matchLabels:
      app: ao-fe
  template:
    metadata:
      labels:
        app: ao-fe
        aadpodidbinding: PROVIDE
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
        app: always-on
      containers:
      - name: ao-fe
        image: REGISTRY_NAME.azurecr.io/ao/ao.fe:latest
        securityContext:
          capabilities:
            drop:
            - NET_RAW
        resources:
          requests:
            cpu: 1000m
            memory: 1024Mi
          limits:
            cpu: 2000m
            memory: 2048Mi
        ports:
        - containerPort: 80
        volumeMounts:
        - name: secrets-store-inline
          mountPath: "/mnt/secrets-store"
          readOnly: true
      volumes:
      - name: secrets-store-inline
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "azure-kv-secrets-provider"
