src/workload-deploy/aks/demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo
  labels:
    aadpodidbinding: pz-ao-eastus-binding
spec:
  containers:
  - name: demo
    image: mcr.microsoft.com/oss/azure/aad-pod-identity/demo:v1.6.3
    args:
      - --subscriptionid=e61e4c75-268b-4c94-ad48-237aa3231481
      - --clientid=a5afdcc3-b7f5-4422-a655-1299ae0bae21
      - --resourcegroup=always-on-eastus
  nodeSelector:
    kubernetes.io/os: linux
