src/workload-deploy/aks/test.ao.be.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ao-be
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ao-be
  template:
    metadata:
      labels:
        app: ao-be
        aadpodidbinding: pz-ao-eastus-binding
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: ao-be
        image: pzao24.azurecr.io/ao/ao.be:latest
        securityContext:
          capabilities:
            drop:
            - NET_RAW
        resources:
          requests:
            cpu: 250m
            memory: 256Mi
          limits:
            cpu: 2000m
            memory: 2048Mi
        volumeMounts:
        - name: secrets-store-inline
          mountPath: "/mnt/secrets-store"
          readOnly: true
      volumes:
      - name: secrets-store-inline
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "azure-kv-secrets-provider"
