src/workload-deploy/aks/test.ao.fe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ao-fe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ao-fe
  template:
    metadata:
      labels:
        app: ao-fe
        aadpodidbinding: pz-ao-eastus-binding
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: ao-fe
        image: pzao24.azurecr.io/ao/ao.fe:latest
        securityContext:
          capabilities:
            drop:
            - NET_RAW
        resources:
          requests:
            cpu: 250m
            memory: 256Mi
          limits:
            cpu: 2000m
            memory: 2048Mi
        ports:
        - containerPort: 80
        volumeMounts:
        - name: secrets-store-inline
          mountPath: "/mnt/secrets-store"
          readOnly: true
      volumes:
      - name: secrets-store-inline
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "azure-kv-secrets-provider"
