src/workload-deploy/aks/test.ao.services-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: ao-be
spec:
  ports:
  - port: 80
  selector:
    app: ao-be
---
apiVersion: v1
kind: Service
metadata:
  name: ao-fe
spec:
  ports:
  - port: 80
  selector:
    app: ao-fe
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ao-fe-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  defaultBackend:
    service:
      name: ao-fe
      port:
        number: 80
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ao-fe
            port:
              number: 80
